Python Code.ipynb

--- a/Code (2).ipynb
+++ b/Code (2).ipynb
@@ -966,7 +966,7 @@
     "movie_list = pn.Column(*[pn.Row(f\"{title}: {rating}\") for title, rating in movie_ratings])\n",
     "highest_rated_title, highest_rated_vote = highest_rated_movie\n",
     "highest_rated_text = pn.Column(\n",
-    "    pn.pane.Markdown(f\"**Highest Rated Movie:**\"), pn.pane.Markdown(f\"{highest_rated_title}: {highest_rated_vote}\")\n",
+    "    pn.pane.Markdown(f\"**Highest Rated Movie:**\"), pn.pane.Markdown(f\"{highest_rated_title}: {highest_rated_vote}\"
     ")\n",
     "\n",
     "# Create the dashboard layout\n",
@@ -986,4 +986,4 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
+  }
