--- a/Code (2).ipynb
+++ b/Code (2).ipynb
@@ -966,7 +966,7 @@
     "movie_list = pn.Column(*[pn.Row(f\"{title}: {rating}\") for title, rating in movie_ratings])\n",
     "highest_rated_title, highest_rated_vote = highest_rated_movie\n",
     "highest_rated_text = pn.Column(\n",
-    "    pn.pane.Markdown(f\"**Highest Rated Movie:**\"), pn.pane.Markdown(f\"{highest_rated_title}: {highest_rated_vote}\"
+    "    pn.pane.Markdown(f\"**Highest Rated Movie:**\"), pn.pane.Markdown(f\"{highest_rated_title}: {highest_rated_vote}\")\n",
     ")\n",
     "\n",
     "# Create the dashboard layout\n",
@@ -986,4 +986,59 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa319107-4026-4228-8710-db749f69dcf9",
+   "metadata": {},
+   "source": [
+    "# User\n",
+    "i want to upload this code on github. what should i do"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbcf5d0e-d34c-421f-b440-3227afad5b39",
+   "metadata": {},
+   "source": [
+    "# Assistant\n",
+    "To upload your code to GitHub, you can follow these steps:\n",
+    "\n",
+    "1. Create a GitHub account if you don't have one already.\n",
+    "2. Once logged in, create a new repository on GitHub. You can do this by clicking on the \"New\" button on the top right corner of the GitHub homepage.\n",
+    "3. Fill in the repository name, description, and choose whether it should be public or private.\n",
+    "4. After creating the repository, you will be provided with a URL for the repository (e.g., https://github.com/yourusername/yourrepository.git).\n",
+    "5. Now, in your local machine, navigate to the directory where your code is located using the command line or terminal.\n",
+    "6. Initialize a new Git repository using the command `git init`.\n",
+    "7. Add your files to the repository using the command `git add .` (this will add all files in the current directory).\n",
+    "8. Commit the files to the repository using the command `git commit -m \"Initial commit\"`.\n",
+    "9. Link your local repository to the GitHub repository using the command `git remote add origin https://github.com/yourusername/yourrepository.git` (replace the URL with the one provided for your repository).\n",
+    "10. Push your code to the GitHub repository using the command `git push -u origin master`.\n",
+    "\n",
+    "If you encounter any issues during this process, you may need to install Git on your local machine. You can use the `git` package in Python to interact with Git repositories programmatically."
+   ]
   }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "anaconda-panel-2023.05-py310",
+   "language": "python",
+   "name": "conda-env-anaconda-panel-2023.05-py310-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
+
